Fix copy visibility

--- a/src/styles/components/Shortener.module.css
+++ b/src/styles/components/Shortener.module.css
@@ -239,6 +239,7 @@
     grid-template-columns: 3.4rem calc(100% - 3.4rem - 1.9rem);
     gap: 1.9rem;
     align-content: center;
+    overflow: visible;
   }
   
 
